# adventofcode

./: .gitignore  Cargo.toml  README.md  build.rs
data/year2023/: test_day07.txt
src/: fetch.rs  fold_map.rs  lib.rs  macros.rs  main.rs
src/2022/: day1.rs  day2.rs
src/aoc2022/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
src/years/: mod.rs
src/years/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  mod.rs
src/years/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  mod.rs
