[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
open = "3.2.0"

[[bin]]
name = "fetch"
path = "src/fetch.rs"

[[bin]]
name = "day1"
path = "src/2022/day1.rs"