[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "main"
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
open = "3.2.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fetch"
path = "src/fetch.rs"


#[[bin]]
#name = "day1"
#path = "src/aoc2022/day1.rs"
#
#[[bin]]
#name = "day2"
#path = "src/aoc2022/day2.rs"