[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"
authors = ["Bastian Hentschel"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
concat-idents = "1.1.5"
regex = { version = "1.10.2", features = [] }
reqwest = { version = "0.11.22", features = ["blocking"] }

[[bin]]
name = "download"
